# oxish-addons

./: .gitignore  .gitmodules  COPYRIGHT  Cargo.toml
.github/workflows/: ci.yml
src/: auth.rs  buffered_stream.rs  connection.rs  fd.rs  key_exchange.rs  lib.rs  macros.rs  main.rs  monitor.rs  proto.rs  service.rs  userauth.rs
src/common/: error.rs  mod.rs
src/exec/: mod.rs
src/exec/use_pty/: mod.rs  parent.rs
src/exec/use_pty/pipe/: mod.rs  ring_buffer.rs
src/gettext/: mod.rs
src/pty/: mod.rs
src/pty/cutils/: mod.rs
src/pty/system/: interface.rs  mod.rs
src/pty/system/term/: mod.rs
src/sudo/: mod.rs
src/system/: interface.rs  mod.rs
src/system/term/: mod.rs
