[package]
name = "oxish"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.95"
aws-lc-rs = { version = "1.12", features = ["prebuilt-nasm"] }
clap = { version = "4.5.24", features = ["derive"] }
futures = "0.3.31"
listenfd = "1.0.2"
thiserror = "2.0.9"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2.180"

[lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"
